--- a/templates/home.html
+++ b/templates/home.html
@@ -2,5 +2,5 @@
 {% block title %}Home Page{% endblock %}
 
 {% block content %}
-<p>Welcome to Home Page</p>
+<p>Welcome to Home fucking Page</p>
 {% endblock %}
