--- a/templates/base.html
+++ b/templates/base.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>{% block title %}{% endblock %}</title>
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	</head>
-	<body>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-				<div class="navbar-nav">
-					<a class="nav-item nav-link active" href="/">Home</a>
-					<a class="nav-item nav-link active" href="/login">Login</a>
-					<a class="nav-item nav-link active" href="/logout">logout</a>
-				</div>
-			</div>
-		</nav>
-		<p>{% block content %}{% endblock %}</p>
-	</body>
+<head>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<title>{% block title %}{% endblock %}</title>
+</head>
+<body>
+	<nav class="nav">
+		<a class="nav-link" href="/">Home</a>
+		<a class="nav-link" href="/login">Login</a>
+		<a class="nav-link" href="/logout">Logout</a>
+		<a class="nav-link" href="/view">View</a>
+	</nav>
+	{% block content %}
+	{% endblock %}
+</body>
 </html>
