--- a/templates/login.html
+++ b/templates/login.html
@@ -9,9 +9,9 @@
 			{% endfor %}
 		{% endif %}
 	{% endwith %}
-<form action="#" method="post">
+<form action="#" method="POST">
 	<p>Name:</p>
-	<p><input type="text" name="nm" /></p>
-	<p><input type="submit" value="submit" /></p>
+	<input type="text" name="nm" />
+	<input type="submit" value="submit" />
 </form>
 {% endblock %}
