--- a/templates/user.html
+++ b/templates/user.html
@@ -10,5 +10,8 @@
 			{% endfor %}
 		{% endif %}
 	{% endwith %}
-<p>Welcome, {{user}}<p>
+<form action="#" method="POST">
+	<input type="email" name="email" placeholder="Enter email" value="{{email if email}}"/>
+	<input type="submit" value="sumbit"/>
+</form>
 {% endblock %}
